--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="div1">
-    <img src="/assets/images/daenerys.jpeg" alt="girlImage" id="image1">
+    <img src="./assets/images/daenerys.jpeg" alt="girlImage" id="image1">
     <h1 id="heading1">That special moment</h1>
     <p id="para1">When you find the perfect avocado at the supermarket</p>
   </div>
